# sophosfirewall-ansible

./: .ansibleignore  .buildinfo  .gitignore  .readthedocs.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  INTEGRATION_TESTS.md  README.md  RELEASE.md  changelog.html  environment_variables.html  galaxy.yml  index.html  objects.inv  philipfinucane@uk-abn-mx1.brown.sophos  pyproject.toml  run_integration_tests.yml  run_tests.sh  search.html  searchindex.js  sfos_admin_settings_module.html  sfos_atp_module.html  sfos_authentication_ad_module.html  sfos_authentication_azure_module.html  sfos_authentication_edirectory_module.html  sfos_authentication_ldap_module.html  sfos_authentication_radius_module.html  sfos_authentication_tacacs_module.html  sfos_backup_module.html  sfos_certificate_authority_module.html  sfos_certificate_module.html  sfos_device_access_profile_module.html  sfos_dns_module.html  sfos_firewall_rule_module.html  sfos_firewall_rulegroup_module.html  sfos_fqdn_host_module.html  sfos_fqdn_hostgroup_module.html  sfos_httpapi.html  sfos_ip_host_module.html  (+23 more)
.github/workflows/: blackduck.yaml  gh-pages.yaml  lint-docs.yaml  release.yaml
changelogs/: changelog.yaml  config.yaml
docs/: .gitignore  antsibull-docs.cfg  build.sh  conf copy.py  conf.py  requirements.txt
docs/docsite/: config.yml  extra-docs.yml
docs/rst/: changelog.rst  environment_variables.rst  index.rst  sfos_admin_settings_module.rst  sfos_atp_module.rst  sfos_backup_module.rst  (+19 more)
docsite/: httpapi_example.html  installation.html  setup.html  tutorial.html  tutorial1.x.html  tutorial2.x.html
(+157 files in other folders)
