[tool.poetry]
name = "sophosfirewall-ansible"
version = "2.0.0"
description = "Ansible modules for Sophos Firewall"
authors = ["Matt Mullen <matt.mullen@sophos.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sophosfirewall-python = "^0.1.62"
ansible = "^11.3.0"
ansible-core = "^2.18.3"

[tool.poetry.group.dev.dependencies]
antsibull-core = "^3.4.0"
antsibull-docs = "^2.16.3"
black = "25.1.0"
pylint = "^3.3.6"
sphinx-rtd-theme = "^3.0.2"
sphinx-ansible-theme = "^0.10.3"
Sphinx = "^8.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
